<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/auth_bg"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:contentDescription="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/auth_layout_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cv_sign_in"
            android:alpha="0.9"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/cv_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/cv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password_recovery_will_be_sent_to_your_email"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginBottom="10dp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/black"
                            android:orientation="vertical"
                            android:layout_marginBottom="10dp">

                                <EditText
                                    android:id="@+id/et_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:textColor="@color/black"
                                    android:hint="@string/email_field"
                                    android:importantForAutofill="no"
                                    android:inputType="textEmailAddress" />

                        </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/tv_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminateTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>